--- a/mp3-react/mp3-player/src/components/Header/Header.module.scss
+++ b/mp3-react/mp3-player/src/components/Header/Header.module.scss
@@ -5,7 +5,7 @@
   right: 330px;
 
   height: 70px;
-  background-color: var(--background);
+  background-color: transparent;
   display: flex;
   align-items: center;
 
@@ -52,6 +52,10 @@
         opacity: 0.7;
       }
     }
+
+    .header-theme {
+      color: var(--primary-color);
+    }
   }
 }
 .header-changePage {
@@ -74,7 +78,7 @@
 .header-search-group {
   display: flex;
   align-items: center;
-  background-color: #2f2739;
+  background-color: var(--background-white);
   border-radius: 20px;
 
   flex: 1;
