--- a/mp3-react/mp3-player/src/components/Lyric/Lyric.css
+++ b/mp3-react/mp3-player/src/components/Lyric/Lyric.css
@@ -1,5 +1,9 @@
 .lyric-container {
-  padding: 0px 42px;
+  padding: 16px 42px 0;
+}
+
+.lyric-container ::-webkit-scrollbar {
+  display: none;
 }
 
 .lyric-container h4 {
@@ -57,9 +61,46 @@
   font-size: 28px;
 }
 
+.lyric-cdThumb {
+  width: 80%;
+}
+
 .lyric-cdThumb .card-list {
-  height: 480px;
+  height: auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+}
+
+.lyric-player-control {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
+  padding: 32px 0;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-background);
+}
+
+.lyric-player-control .song-player {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+.playlist .card-list-image {
+  border-radius: 4px;
+}
+
+.playlist .swiper-slide {
+  width: 330px;
+  height: 330px;
+}
+
+.playlist .swiperAactive {
+  width: 400px;
+  height: 400px;
 }
