--- a/mp3-react/mp3-player/src/components/SongItem/SongItem.css
+++ b/mp3-react/mp3-player/src/components/SongItem/SongItem.css
@@ -7,7 +7,7 @@
 }
 
 .song-item:hover {
-  background-color: var(--song-hover-color);
+  background-color: var(--background-white);
 }
 
 .song-item.active {
