--- a/mp3-react/mp3-player/src/components/Header/Header.module.scss
+++ b/mp3-react/mp3-player/src/components/Header/Header.module.scss
@@ -27,6 +27,7 @@
     .header-login {
       display: flex;
       align-items: center;
+      cursor: pointer;
 
       & img {
         width: 40px;
@@ -83,6 +84,100 @@
 
   flex: 1;
   max-width: 540px;
+  position: relative;
+
+  .header-suggest {
+    position: absolute;
+    z-index: 1;
+    padding: 13px 16px;
+    display: none;
+
+    top: 100%;
+    left: 0;
+    right: 0;
+    height: auto;
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    background-color: var(--background-color);
+
+    &.show {
+      display: block;
+    }
+
+    .header-suggest-title {
+      font-size: 14px;
+      padding: 10px;
+    }
+
+    .header-suggest-box {
+      .header-suggest-item {
+        display: flex;
+        align-items: center;
+        padding: 8px 10px;
+        font-size: 14px;
+
+        & span {
+          margin-right: 8px;
+          color: var(--text-decs-color);
+        }
+
+        &:hover {
+          cursor: pointer;
+          background-color: var(--background-white);
+        }
+
+        .header-suggest-text {
+          color: #fff;
+        }
+      }
+    }
+
+    .suggestion {
+      .suggestion-list {
+        border-top: 1px solid var(--border-primary);
+        display: none;
+
+        &.show {
+          display: block;
+        }
+        .suggestion-item {
+          display: flex;
+          align-items: center;
+          width: 100%;
+          padding: 4px 8px;
+
+          border-radius: 4px;
+          cursor: pointer;
+
+          &:hover {
+            background-color: var(--background-white);
+          }
+
+          .suggestion-item-image {
+            & img {
+              width: 40px;
+              height: 40px;
+              border-radius: 50%;
+            }
+          }
+
+          .suggestion-item-info {
+            margin-left: 8px;
+            .suggestion-item-info-name {
+              font-size: 14px;
+              margin-bottom: 4px;
+            }
+
+            .suggestion-item-info-singer {
+              font-size: 12px;
+              color: var(--text-decs-color);
+            }
+          }
+        }
+      }
+    }
+  }
 
   .header-search-input {
     flex: 1;
@@ -106,13 +201,53 @@
     font-size: 26px;
     color: #fff;
     padding: 4px 8px;
+    display: flex;
     border-top-left-radius: 50%;
+  }
+}
+
+@media (max-width: 1300px) {
+  .header {
+    right: 0;
   }
 }
 
 @media (max-width: 1200px) {
   .header {
-    right: 0;
     left: 70px;
+  }
+}
+
+@media (max-width: 992px) {
+  .header-changePage {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .header {
+    right: 0;
+    left: 0px;
+    padding: 0 24px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header {
+    padding: 0 16px;
+    .header-search-group {
+      .header-search-icon {
+        font-size: 22px;
+      }
+    }
+
+    .header-right {
+      margin-left: 16px;
+
+      .header-icon {
+        width: 36px;
+        height: 36px;
+      }
+    }
   }
 }
