--- a/mp3-react/mp3-player/src/components/CardList/CardList.css
+++ b/mp3-react/mp3-player/src/components/CardList/CardList.css
@@ -74,3 +74,15 @@
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
 }
+
+.card-list-duration {
+  position: absolute;
+  right: 4px;
+  bottom: 4px;
+  z-index: 3;
+  background-color: #000000b3;
+  font-size: 12px;
+  font-weight: 300;
+  padding: 3px 5px;
+  border-radius: 4px;
+}
