--- a/mp3-react/mp3-player/src/components/Header/Header.module.scss
+++ b/mp3-react/mp3-player/src/components/Header/Header.module.scss
@@ -204,6 +204,13 @@
     display: flex;
     border-top-left-radius: 50%;
   }
+
+  .header-search-clear {
+    font-size: 18px;
+    padding: 4px 12px;
+    cursor: pointer;
+    color: var(--text-decs-color);
+  }
 }
 
 @media (max-width: 1300px) {
